[project]
name = "sednavorg-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs-awesome-pages-plugin~=2.10.1",
    "mkdocs-git-committers-plugin-2~=2.5.0",
    "mkdocs-git-revision-date-localized-plugin~=1.5.1",
    "mkdocs-macros-plugin~=1.5.0",
    "mkdocs-material[imaging]~=9.7.3",
    "mkdocs-nav-weight~=0.3.0",
    "mkdocs-static-i18n~=1.3.1",
]
